--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -1,19 +1,10 @@
-/* .App {
-  text-align: center;
-} */
-
 body {
 	font: 12px/20px 'Lucida Grande', Verdana, sans-serif;
-	/* color: #404040; */
-	/* background: #ebc9a2; */
   }
 
-  input, textarea, select, label {
+  input {
 	font-family: inherit;
 	font-size: 13px;
-
-	/* -webkit-box-sizing: border-box; */
-	/* -moz-box-sizing: border-box; */
 	box-sizing: border-box;
   }
   .error {
@@ -26,6 +17,7 @@ body {
   }
 
   .login {
+	display: block;
 	margin: 20px auto;
 	padding: 18px 20px;
 	width: 250px;
@@ -34,11 +26,7 @@ body {
 	border: 1px solid #172b4e;
 	border-bottom-color: #142647;
 	border-radius: 5px;
-	/* background-image: -webkit-radial-gradient(cover, #437dd6, #3960a6);
-	background-image: -moz-radial-gradient(cover, #437dd6, #3960a6);
-	background-image: -o-radial-gradient(cover, #437dd6, #3960a6);
-	background-image: radial-gradient(farthest-corner, #437dd6, #3960a6); */
-	/* -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5); */
+	text-align: center;
 	box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
   }
 
@@ -47,12 +35,10 @@ body {
 	font-size: 16px;
 	font-weight: bold;
 	color: white;
-	text-align: center;
 	text-shadow: 0 -1px rgba(0, 0, 0, 0.4);
   }
 
   .login-input {
-	display: block;
 	width: 100%;
 	height: 37px;
 	margin-bottom: 20px;
@@ -63,61 +49,21 @@ body {
 	border: 1px solid #15243b;
 	border-top-color: #0d1827;
 	border-radius: 4px;
-	/* background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
-	background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
-	background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
-	background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
-	-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.2);*/
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.2);
   }
 
-  /* .login-input:focus {
-	outline: 0;
-	background-color: #32486d;
-	-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(255, 255, 255, 0.6);
-  } */
-
-  /* .login-input { line-height: 35px; } */
-
   .login-submit {
-	display: block;
 	width: 100%;
 	height: 37px;
 	margin-bottom: 15px;
 	font-size: 14px;
 	font-weight: bold;
 	color: #294779;
-	text-align: center;
-	/* text-shadow: 0 1px rgba(255, 255, 255, 0.3); */
 	background: #adcbfa;
 	background-clip: padding-box;
 	border: 1px solid #284473;
 	border-bottom-color: #223b66;
 	border-radius: 4px;
-	cursor: pointer;
-	/* background-image: -webkit-linear-gradient(top, #d0e1fe, #96b8ed);
-	background-image: -moz-linear-gradient(top, #d0e1fe, #96b8ed);
-	background-image: -o-linear-gradient(top, #d0e1fe, #96b8ed);
-	background-image: linear-gradient(to bottom, #d0e1fe, #96b8ed);
-	-webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 7px rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.15); */
 	box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), inset 0 0 7px rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.15);
   }
 
-  /* input[type='checkbox']:checked + .login-input { display: block} */
-
-/*
-  .login-submit:active {
-	background: #a4c2f3;
-	-webkit-box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.4), 0 1px rgba(255, 255, 255, 0.1);
-	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.4), 0 1px rgba(255, 255, 255, 0.1);
-  } */
-/*
-  ::-moz-focus-inner {
-	padding: 0;
-	border: 0;
-  }
-
-  :-moz-placeholder { color: #bcc0c8 !important; }
-  ::-webkit-input-placeholder { color: #bcc0c8; }
-  :-ms-input-placeholder { color: #bcc0c8 !important; } */
